--- a/commands.org
+++ b/commands.org
@@ -10,7 +10,7 @@
   #+begin_src shell
     yt-dlp -x --audio-quality 0 --restrict-filenames '<playlist-id>' -o '%(title)s'
   #+end_src
-* Playlist
+* Playlists
 ** Celeste
    - id: =PLY9u9wC7ApRJk-tG4_pBtH6ubEJ7svnOB=
    - name: =celeste=
