--- a/commands.org
+++ b/commands.org
@@ -23,24 +23,53 @@
 ** Calmity
    - id: =PLsuCmTriuYXdOYZVaKyex5lIy3lT9K_PW=
    - name: =calamity=
-* Goals [2/11]
+* Goals [0/11]
   - [ ] Tailored playlist
-  - [X] Terraria
-  - [X] Calamity Mod (Including extra)
+  - [-] Terraria
+    - [X] ID acquired
+    - [ ] Playlist generated
+  - [-] Calamity Mod (Including extra)
+    - [X] ID acquired
+    - [ ] Playlist generated
   - [ ] Calamity Infernum Mod
+    - [ ] ID acquired
+    - [ ] Playlist generated
   - [ ] Baba
+    - [ ] ID acquired
+    - [ ] Playlist generated
   - [ ] Deltarune
+    - [ ] ID acquired
+    - [ ] Playlist generated
   - [ ] Undertale
+    - [ ] ID acquired
+    - [ ] Playlist generated
   - [ ] Isaac [0/4]
     - [ ] Isaac Afterbirth
+      - [ ] ID acquired
+      - [ ] Playlist generated
     - [ ] Isaac Afterbirth+
+      - [ ] ID acquired
+      - [ ] Playlist generated
     - [ ] Isaac Repentance
+      - [ ] ID acquired
+      - [ ] Playlist generated
     - [ ] Isaac Antibirth
+      - [ ] ID acquired
+      - [ ] Playlist generated
   - [ ] Minecraft
+    - [ ] ID acquired
+    - [ ] Playlist generated
   - [ ] Stardew Valley
-  - [ ] Random Playlist [0/5]
-    - [ ] Naz - Tay K Returns to Dreamland 4
-    - [ ] Pink Clouds and sticky rain (lookup xidnaf)
-    - [ ] smash bros brawl main theme
-    - [ ] smash bros ultimate main theme
-    - [ ] Xomu - Walpurgis Night
+    - [ ] ID acquired
+    - [ ] Playlist generated
+* Random Playlist [0/1]
+** making it
+  - [ ] Make a youtube playlist with random stuff
+    - [ ] ID acquired
+    - [ ] Platlist generated
+** Playlist items
+  - [ ] Naz - Tay K Returns to Dreamland 4
+  - [ ] Pink Clouds and sticky rain (lookup xidnaf)
+  - [ ] smash bros brawl main theme
+  - [ ] smash bros ultimate main theme
+  - [ ] Xomu - Walpurgis Night
