--- a/commands.org
+++ b/commands.org
@@ -23,6 +23,9 @@
 ** Calmity
    - id: =PLsuCmTriuYXdOYZVaKyex5lIy3lT9K_PW=
    - name: =calamity=
+** Calamity infernum
+   - id: =PLfA6eOuWprRO33noGigJRXO1WXbkfmIlV=
+   - name: =calamity_infernum=
 ** Baba
    - id: =PLMoZgWjm14OF2AWFfPc3cyQH7T2SC89jo=
    - name: =baba=
@@ -62,16 +65,16 @@
 ** Rhythm doctor
    - id: =PLHVUN_wezMf9LHGahDuuIiPlog4LI9J8k=
    - name: =rhythm_doctor=
-* Goals [0/13]
+* Goals [1/13]
   - [ ] Tailored playlist
-  - [-] Terraria
+  - [X] Terraria
     - [X] ID acquired
-    - [ ] Playlist generated
+    - [X] Playlist generated
   - [-] Calamity Mod (Including extra)
     - [X] ID acquired
     - [ ] Playlist generated
-  - [ ] Calamity Infernum Mod
-    - [ ] ID acquired
+  - [-] Calamity Infernum Mod
+    - [X] ID acquired
     - [ ] Playlist generated
   - [-] Baba
     - [X] ID acquired
