--- a/commands.org
+++ b/commands.org
@@ -1,6 +1,6 @@
 * Generate 'everything' playlist
   #+begin_src shell
-    cat celeste > everything
+    cat celeste hollow_knight terraria calamity calamity_infernum baba deltarune undertale isaac_rebirth isaac_afterbirth isaac_repentance isaac_antibirth minecraft stardew_valley cassette_beasts RoA rhythm_doctor > everything
   #+end_src
 * Generate a specific playlist
   #+begin_src shell
