Fixed typo and added ID list and added the Playlist names list. Planning to make a script that makes the playlists and one that downloads them

--- a/commands.org
+++ b/commands.org
@@ -20,7 +20,7 @@
 ** Terraria
    - id: =PLbJE2f8Bl_gRq7g69Z4xfHV7Je-WWvpdJ=
    - name: =terraria=
-** Calmity
+** Calamity
    - id: =PLsuCmTriuYXdOYZVaKyex5lIy3lT9K_PW=
    - name: =calamity=
 ** Calamity infernum
@@ -62,6 +62,30 @@
 ** Rhythm doctor
    - id: =PLHVUN_wezMf9LHGahDuuIiPlog4LI9J8k=
    - name: =rhythm_doctor=
+* All Playlist IDs
+  #+begin_src shell
+    playlists="PLY9u9wC7ApRJk-tG4_pBtH6ubEJ7svnOB PLmOldskd2VbL7_t-NE9p6rEboq_v0AHko PLbJE2f8Bl_gRq7g69Z4xfHV7Je-WWvpdJ PLsuCmTriuYXdOYZVaKyex5lIy3lT9K_PW PLfA6eOuWprRO33noGigJRXO1WXbkfmIlV PLMoZgWjm14OF2AWFfPc3cyQH7T2SC89jo PLEUKcNuP7bDX9RoW3HqYR6EFvWZh12upZ PLpJl5XaLHtLX-pDk4kctGxtF4nq6BIyjg PLhPp-QAUKF_iiixYtOGmynw-BMEju-EWo PLyfXx1BeqwFa91omolDHEBUUC2Ip8f0l_ PL_sXFbaP261ituF7mOuSGHhfmn9G6GIwf PLrWR7klg98H0DbavfBz66OJO_E3wxKVSZ PLefKpFQ8Pvy5aCLAGHD8Zmzsdljos-t2l PLoku_1Va0MjwRzYb1yfBS3Ob5eyKbBi2p PLKDOdCjxOjzL6dnS9DsU4aNYU0ignNtWD PLCPLpSD-PMt7l7ZYcdLgBVH7VqmL-VC07 PLHVUN_wezMf9LHGahDuuIiPlog4LI9J8k"
+  #+end_src
+* All Playlist names
+  #+begin_src shell
+    celeste
+    hollow_knight
+    terraria
+    calamity
+    calamity_infernum
+    baba
+    deltarune
+    undertale
+    isaac_rebirth
+    isaac_afterbirth
+    isaac_repentance
+    isaac_antibirth
+    minecraft
+    stardew_valley
+    cassette_beasts
+    RoA
+    rhythm_doctor
+  #+end_src
 * Goals [12/13]
   - [ ] Tailored playlist
   - [X] Terraria
