--- a/commands.org
+++ b/commands.org
@@ -126,7 +126,7 @@ _Run this in the toplevel directory_
   #+begin_src shell
     names="celeste.m3u hollow_knight.m3u terraria.m3u calamity.m3u calamity_infernum.m3u baba.m3u deltarune.m3u undertale.m3u isaac_rebirth.m3u isaac_afterbirth.m3u isaac_repentance.m3u isaac_antibirth.m3u minecraft.m3u stardew_valley.m3u cassette_beasts.m3u RoA.m3u rhythm_doctor.m3u"
   #+end_src
-* Goals [12/13]
+* Goals [12/15]
   - [ ] Tailored playlist
   - [X] Terraria
     - [X] ID acquired
@@ -174,6 +174,9 @@ _Run this in the toplevel directory_
   - [X] Rhythm doctor
     - [X] ID acquired
     - [X] Playlist generated
+  - [ ] Drawn to life: The next chapter
+    - [ ] ID acquired
+    - [ ] Playlist generated
   - [ ] TF2
     - [ ] ID acquired
     - [ ] Playlist generated
